--- a/apache-kafka/docker-compose.yaml
+++ b/apache-kafka/docker-compose.yaml
@@ -8,10 +8,10 @@ version: "3"
 # kafka-consumer-groups --describe --all-groups --bootstrap-server=kafka:9092
 # consumer:
 # kafka-console-consumer --topic=mytest --bootstrap-server=kafka:9092
+# kafka-console-consumer --topic=mytest --from-beginning --bootstrap-server=kafka:9092
 # producer:
 # kafka-console-producer --topic=mytest --bootstrap-server=kafka:9092
-# {"routeId":"1","clientId":"1"}
-# {"routeId":"1","clientId":"1","position":[-15.82651,-47.92878],"finished":false}
+# {"accountId":"","amount":777,"pixKeyFrom":"email@email.com","pixKeyFromKind":"email","description":"test"}
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
@@ -27,7 +27,7 @@ services:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_LISTENERS: INTERNAL://:9092,OUTSIDE://:9094
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9092,OUTSIDE://host.docker.internal:9094
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://host.docker.internal:9092,OUTSIDE://host.docker.internal:9094
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
@@ -53,14 +53,14 @@ services:
     depends_on:
       - kafka
 
-  control-center:
-    image: confluentinc/cp-enterprise-control-center:latest
-    container_name: control-center
-    depends_on:
-      - kafka
-    ports:
-      - "9021:9021"
-    environment:
-      CONTROL_CENTER_BOOTSTRAP_SERVERS: 'kafka:9092'
-      CONTROL_CENTER_REPLICATION_FACTOR: 1
-      PORT: 9021  
+#  control-center:
+#    image: confluentinc/cp-enterprise-control-center:latest
+#    container_name: control-center
+#    depends_on:
+#      - kafka
+#    ports:
+#      - "9021:9021"
+#    environment:
+#      CONTROL_CENTER_BOOTSTRAP_SERVERS: 'kafka:9092'
+#      CONTROL_CENTER_REPLICATION_FACTOR: 1
+#      PORT: 9021  
