--- a/go-codepix/.env.example
+++ b/go-codepix/.env.example
@@ -7,3 +7,8 @@ DSN_TEST=":memory:"
 ENV_MODE="dev"
 DEBUG="true"
 AUTO_MIGRATE_DB="true"
+
+KAFKA_BOOTSTRAP_SERVERS="host.docker.internal:9092"
+KAFKA_CONSUMER_GROUP_ID="go-codepix"
+TRANSACTIONS_TOPIC="transactions"
+TRANSACTION_CONFIRMATION_TOPIC="transaction-confirmation"
