--- a/go-codepix/.env.example
+++ b/go-codepix/.env.example
@@ -2,13 +2,13 @@ DB_TYPE="postgres"
 DSN="host=db dbname=codepix user=postgres password=root sslmode=disable"
 
 DB_TYPE_TEST="sqlite3"
-DSN_TEST=":memory:"
+DSN_TEST="file::memory:?cache=shared"
 
 ENV_MODE="dev"
-DEBUG="true"
+DEBUG="false"
 AUTO_MIGRATE_DB="true"
 
-KAFKA_BOOTSTRAP_SERVERS="host.docker.internal:9092"
+KAFKA_BOOTSTRAP_SERVERS="host.docker.internal:9094"
 KAFKA_CONSUMER_GROUP_ID="go-codepix"
 TRANSACTIONS_TOPIC="transactions"
 TRANSACTION_CONFIRMATION_TOPIC="transaction-confirmation"
