feat: nest backend - finalização dos serviços relacionados ao registro e consulta das chaves pix

--- a/nestjs-backend/.env
+++ b/nestjs-backend/.env
@@ -6,7 +6,13 @@ ENV_MODE="dev"
 DEBUG="true"
 AUTO_MIGRATE_DB="true"
 
-KAFKA_BOOTSTRAP_SERVERS="host.docker.internal:9092"
+KAFKA_BOOTSTRAP_SERVERS="host.docker.internal:9094"
 KAFKA_CONSUMER_GROUP_ID="go-codepix"
 TRANSACTIONS_TOPIC="transactions"
 TRANSACTION_CONFIRMATION_TOPIC="transaction-confirmation"
+
+GRPC_URL="host.docker.internal:50051"
+GRPC_PACKAGE="github.com.moura1001.codepix"
+
+BANK_CODE="001"
+BANK_NAME="Caiza"
