--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,5 +9,5 @@ services:
     volumes:
       - ./go-codepix:/go/src/
     extra_hosts:
-      - "host.docker.internal:172.17.0.1"
+      - "host.docker.internal:host-gateway"
 
