--- a/nestjs-backend/docker-compose.yaml
+++ b/nestjs-backend/docker-compose.yaml
@@ -10,4 +10,4 @@ services:
       POSTGRES_PASSWORD: root
       POSTGRES_DB: nest
     extra_hosts:
-      - "host.docker.internal:172.17.0.1"
+      - "host.docker.internal:host-gateway"
