feat: go codepix e nestjs backend - confirmação e conclusão da transação e espelhamento de todo o processo nas 2 contas envolvidas, quer sejam do mesmo banco ou de bancos diferentes

--- a/go-codepix/.env.example
+++ b/go-codepix/.env.example
@@ -5,7 +5,7 @@ DB_TYPE_TEST="sqlite3"
 DSN_TEST="file::memory:?cache=shared"
 
 ENV_MODE="dev"
-DEBUG="false"
+DEBUG="true"
 AUTO_MIGRATE_DB="true"
 
 KAFKA_BOOTSTRAP_SERVERS="host.docker.internal:9094"
