--- a/nestjs-backend/docker-compose.yaml
+++ b/nestjs-backend/docker-compose.yaml
@@ -1,13 +1,14 @@
-version: "3"
+version: '3'
 
 services:
   db-test:
     image: postgres:13-alpine
     container_name: db-test
     ports:
-      - "5432:5432"
+      - '5432:5432'
     environment:
       POSTGRES_PASSWORD: root
-      POSTGRES_DB: nest
+    volumes:
+      - .docker/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
     extra_hosts:
-      - "host.docker.internal:host-gateway"
+      - 'host.docker.internal:host-gateway'
