--- a/nestjs-backend/.env
+++ b/nestjs-backend/.env
@@ -7,12 +7,13 @@ DEBUG="true"
 AUTO_MIGRATE_DB="true"
 
 KAFKA_BOOTSTRAP_SERVERS="host.docker.internal:9094"
-KAFKA_CONSUMER_GROUP_ID="go-codepix"
+#KAFKA_CONSUMER_GROUP_ID="nest-backend"
 TRANSACTIONS_TOPIC="transactions"
 TRANSACTION_CONFIRMATION_TOPIC="transaction-confirmation"
 
 GRPC_URL="host.docker.internal:50051"
 GRPC_PACKAGE="github.com.moura1001.codepix"
 
-BANK_CODE="001"
-BANK_NAME="Caiza"
+#BANK_CODE="001"
+#BANK_NAME="Caiza"
+
