--- a/nextjs-frontend/package.json
+++ b/nextjs-frontend/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "001:dev": "BANK_CODE=001 next dev -p 8000",
+    "002:dev": "BANK_CODE=002 next dev -p 8001"
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
@@ -15,6 +17,7 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
     "@mui/x-data-grid": "^6.18.0",
+    "dotenv": "^16.3.1",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18"
